--- a/卡片盒/开发手册.md
+++ b/卡片盒/开发手册.md
@@ -9,7 +9,8 @@
 2. 单表行数超过 500 万行或者单表容量超过 2GB，才推荐进行分库分表。
 3. 表达是与否概念的字段，必须使用 is_xxx 的方式命名，数据类型是 unsigned tinyint （1 表示是，0 表示否）。
 4. 小数类型为 decimal，禁止使用 float 和 double(*存在精度问题*)。
-5. 在数据库设计时,字符集编码选择 utf-8mb4(*most byte 4*),它是 utf-8 的超集,完全兼容 utf-8 并能够使用四个字节存储更多的字符,特别是在数据库中存储 emoji 的情况,必须使用 utf-8 mb4
+5. 在数据库设计时, 字符集编码选择 utf-8mb4 (*most byte 4*), 它是 utf-8 的超集, 完全兼容 utf-8 并能够使用四个字节存储更多的字符, 特别是在数据库中存储 emoji 的情况, 必须使用 utf-8 mb4
+6. 必须为数据库中的每个对象添加注释, 以帮助理解其用途
 
 # 开发思想
 - 尽量避免过多的页面跳转,可以用弹窗解决的就用弹窗解决
