更新部分面试题

--- a/卡片盒/集合.md
+++ b/卡片盒/集合.md
@@ -1,13 +1,10 @@
-# 补充
-## Map 集合转换为对象
-- 使用 Json 工具, 将 Map 转换为 Json, 再将 Json 转为对象
-
 # HashMap
 - 默认容量 16 
 - 加载因子 0.75
 - 扩容临界值 = 默认容量 * 加载因子
 - 每次扩容, 容量为原长度的两倍
 ## 实现原理
+
 Jdk1.7
 1. 在实例化后, 会创建一个长度 16 的 Entry\[] table 数组
 2. 在调用 put (k1, v1) 后, 调用 k1 的 hashCode () 方法计算 hash 值, 将 hash 值通过某种算法计算后得到这个值在数组中的位置
@@ -15,6 +12,14 @@ Jdk1.7
 Jdk8
 1. 在第一次调用 put () 方法时, 初始化 Node[] table 数组
 2. 当数组某个索引位置上以链表存储的数据个数大于 8 且数组长度大于 64 时, 将此索引位置上所有数据改为红黑树存储, 否则进行扩容
+
+## 为什么 HashMap 底层采用数组+链表/红黑树?
+数组是 HashMap 的主体, 用来存储数据, 而链表则是用于解决 Hash 冲突问题. Hash 冲突是指由于哈希函数的限制, 不同元素可能会得到相同的哈希值, 就会导致这些结果出现在数组的相同位置, 这时就需要用链表来讲这些元素串联起来, 以便查询时能够找到这些元素
+
+在 Java8 中, 当链表长度大于 8 时, 会自动将链表转换为红黑树, 红黑树时一种平衡二叉树, 使用红黑树能够使得 HashMap 的查询效率得到提升
+
+总的来说, HashMap 采用数组+链表/红黑树的结构能够在解决哈希冲突的同时保证查询效率
+
 
 ## 源码解析
 ```java
