完善部分面试题

--- a/卡片盒/多线程.md
+++ b/卡片盒/多线程.md
@@ -8,6 +8,7 @@
 2. 继承 Thread 类
 3. 实现 Callable 接口
 4. 通过线程池获取
+5. 通过工具类 `Executors` 开启
 
 # Lock 和 synchronized 的区别
 1. `Lock` 是 `java.util.concurrent.locks` 包下的一个接口, 而 synchronized 是 Java 中的一个关键字
