新增 apache-camel 组件与 Kafka

--- a/卡片盒/分布式.md
+++ b/卡片盒/分布式.md
@@ -11,7 +11,7 @@
 ## RPC 
  *Remote Procedure Call(远程过程调用)*
  * RPC是一种解决进程间的通信方式的思想
- * 通过stub代理,实现独立服务间的通信,获取结果等...*
+ * 通过stub代理,实现独立服务间的通信,获取结果等...
 
 ## 分布式中的思想与基本概念
 1. 高并发
