--- a/卡片盒/单点登录.md
+++ b/卡片盒/单点登录.md
@@ -7,7 +7,7 @@
 3. 基于 token 实现
 ## Session 广播
 - 就是 session 复制, 将单一服务的 session 复制到多个服务中, 使各个服务都能获得用户信息
-- 它类似于保证 session 一致性问题的 **session 同步** 解决方案 [[框架高级#9. Session 一致性的几种解决方案？]]
+- 它类似于保证 session 一致性问题的 **session 同步** 解决方案 [[框架高级阶段总结#9. Session 一致性的几种解决方案？]]
 ## ==Redis + Cookie 实现==
 1. 当用户在微服务项目的某个模块登录后, 系统返回用户相关的用户信息, 将这个返回信息分别存储到 Redis 与 cookie 中
 2. Redis 中的 key 按照一定的规则 (*保证每个用户唯一*) 生成唯一的字符串, value 存储用户信息 (*名称, id 等*)
