--- a/卡片盒/多线程.md
+++ b/卡片盒/多线程.md
@@ -19,4 +19,4 @@
 #GOTO
 
 # Lock 的底层原理
-Lock 锁的底层实现在 [[day03_线程池与volatile#AQS (AbstractQueueSynchronizer 抽象队列同步器)]]
+Lock 锁的底层实现在 [[03_线程池与volatile#AQS (AbstractQueueSynchronizer 抽象队列同步器)]]
