--- a/卡片盒/集合.md
+++ b/卡片盒/集合.md
@@ -234,7 +234,7 @@ public class HashMap {
 
 ## 线程安全问题解决
 - Collections. SynchronizedMap
-- ConcurrentHashMap
+- [[02_JUC辅助工具类#线程安全的集合类型]]
  
 
 # Set
