--- a/笔记/24_gmall_B2C/模块总结-商品详情功能.md
+++ b/笔记/24_gmall_B2C/模块总结-商品详情功能.md
@@ -2,7 +2,8 @@
 
 # 介绍
 
-这是一个负责商品详情页面数据展示的模块. 在用户在通过首页推荐或搜索等方式选择一个要查看的商品后, 向用户展示该商品信息详情 (商品名称/图片/价格/可选择的版本/海报信息)
+商品详情展示是一个负责商品详情页面数据展示的模块. 在用户在通过首页推荐或搜索等方式选择一个要查看的商品后, 向用户展示该商品信息详情, 包括商品名称 (sku_name)/图片 (sku_image)/价格 (sku_price)/商品的平台属性等, 这个模块的特点就是需要查询的数据多, 且用户访问不受限制 (尤其是热门商品) 的访问量较大. 在编码的时候针对这一特性做了一系列的优化
+
 其中除网关等其他辅助模块, 主要实现业务的有负责与用户界面~~数据渲染~~交互的 web-all 模块, 负责商品详情数据汇总的 item-service 模块和负责所有商品信息管理的 product-service 模块
 它的具体总体流程是: web-all 接口接到查询商品数据的请求后, 通过 [[OpenFeign]] 远程调用商品详情数据汇总模块 item-service, item-service 按照业务需求远程调用商品信息管理服务 product-service 获取数据并进行封装返回, 在 product-service 中, 提供关于商品各类信息获取的接口
 
@@ -17,3 +18,8 @@
 ## 系统保护相关优化
 
 为了提高系统运行的安全性, 使用了[[day08_AOP+Redisson实现缓存数据查询和布隆过滤器#布隆过滤器|布隆过滤器]]和[[分布式锁]]来分别解决 [[Redis#缓存穿透]]问题和 [[Redis#缓存击穿]]问题
+
+
+# 分布式锁是如何实现的?
+我们采用了 Redisson 作为分布式锁的实现. 具体实现思路是收到数据请求后优先从缓存中进行获取, 如果缓存未命中则通过 `RedissonClient.getLock(lockKey)` 方法获取分布式锁对象 (lockKey 是注解提供的前缀+方法入参+后缀), 尝试通过锁对象来获取锁, 如果获取成功则访问数据库获取信息, 获取锁失败则线程等待自旋, 再次尝试从缓存中获取. 保证只有同个数据只有一个线程访问 DB 获取数据
+
