--- a/笔记/25_gmall_review/02_项目架构与部分服务.md
+++ b/笔记/25_gmall_review/02_项目架构与部分服务.md
@@ -95,13 +95,13 @@
 优化的指标: 通过 grafana 监控平台, 查看相应指标进行优化
 
 对于快速响应的优化手段:
-1. 使用 [[day02_JUC辅助工具类]]中的 completableFuture 多线程异步编排来进行异步调用
+1. 使用 [[02_JUC辅助工具类]]中的 completableFuture 多线程异步编排来进行异步调用
 2. 非实时性的数据存储在 [[Redis]] 中
 3. 使用 [[AOP]] + 注解 + [[分布式锁]]实现对数据的 redis 缓存, 它解决了代码复用问题, 便于后期维护 [[day08_AOP+Redisson实现缓存数据查询和布隆过滤器#通过AOP + 分布式锁实现商品缓存]]
 
 
 涉及的面试题:
-- 线程池的七大核心参数? [[day03_线程池与volatile#创建线程池的七大核心参数]]
+- 线程池的七大核心参数? [[03_线程池与volatile#创建线程池的七大核心参数]]
 - Redis 缓存雪崩/缓存穿透/缓存击穿 [[Redis#Redis 应用中产生的问题]]
 - [[分布式锁#使用 Redis 实现分布式锁]]的死锁处理: 添加过期时间 [[TTL]]; setnx 的 value 设置一个 uuid 来保证每个线程持有锁的唯一性, 通过 lua 脚本的方式来判断确保当前线程释放的锁属于自己
 
