--- a/笔记/25_gmall_review/03_购物车订单,支付及秒杀.md
+++ b/笔记/25_gmall_review/03_购物车订单,支付及秒杀.md
@@ -8,7 +8,7 @@
 
 流程:
 1. 用户点击购物车按钮
-2. 获取 userId 或 tempUserId
+2. 获取 userId 和 tempUserId
 3. 从 redis 中获取用户的购物车信息
 4. 判断此次用户想要添加的商品在购物车内是否已经存在
 5. 如果存在, 则更新这个商品的数量/实时价格/最后更新时间, 其中商品数量最大值为 200; 如果不存在则封装商品数据存入 redis 用户购物车中
